email first signup flow and fix state bug after logout
